[refactor/#53] : product - 상품 검색 dto 및 로직 개선